--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
       This Portfolio was made using CSS, HTML and JavaScript
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
 </body>
 
