--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+  <script>
+    // Apply theme class before CSS loads to prevent flash
+    (function () {
+      let theme = localStorage.getItem('theme');
+      if (!theme) {
+        theme = 'light';
+        localStorage.setItem('theme', 'light');
+      }
+      if (theme === 'light') {
+        document.documentElement.classList.add('light-mode');
+      }
+    })();
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CJLC Portfolio</title>
@@ -14,8 +27,8 @@
 
 <body>
   <header>
-<div class="navbar">
-  </div>
+    <div class="navbar">
+      </div>
   </header>
   <main>
     <section class="hero">
@@ -48,6 +61,7 @@
       This Portfolio was made using CSS, HTML and JavaScript
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
   </body>
   
