--- a/navbar.html
+++ b/navbar.html
@@ -17,7 +17,7 @@
     </ul>
     </nav>
     <div class="toggle-theme">
-        <i class="fa-solid fa-moon"></i>
+        <i class="fa-solid fa-sun"></i>
     </div>
     <div class="hamburger" id="hamburger">
         <span></span>
@@ -217,6 +217,7 @@ footer {
     display: none;
   }
 }
+
 
 @media (max-width: 700px) {
 header {
