--- a/skills.html
+++ b/skills.html
@@ -2,10 +2,23 @@
 <html lang="en">
 
 <head>
+  <script>
+    // Apply theme class before CSS loads to prevent flash
+    (function () {
+      let theme = localStorage.getItem('theme');
+      if (!theme) {
+        theme = 'light';
+        localStorage.setItem('theme', 'light');
+      }
+      if (theme === 'light') {
+        document.documentElement.classList.add('light-mode');
+      }
+    })();
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CJLC Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/skills.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <script>
@@ -18,30 +31,49 @@
     </div>
   </header>
   <main>
-    <section class="hero">
-      <div class="hero-left">
-        <div class="profile-img">
-          <img src="images/developerimage.png" alt="Your Name - Profile Picture">
+    <!-- Skills Section -->
+    <section class="skills-section">
+      <h2 class="skills-title">Current Technologies</h2>
+      <div class="skills-row">
+        <div class="skill">
+          <img src="svg/bootstrap.svg" alt="Bootstrap" />
+          <span>Bootstrap</span>
         </div>
-        <div class="socials">
-          <a href="https://www.facebook.com/christphr.jn" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-          <a href="https://github.com/ChrisBROWN25" target="_blank"> <i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/christopher-jan-cayabyab-746996271/" target="_blank"> <i
-              class="fa-brands fa-linkedin"></i></a>
-          <a href="mailto:cayabyabchristopherjan@gmail.com?subject=Inquiry from your website&body=Hello Christopher Jan,"
-            target="_blank"> <i class="fa-solid fa-square-envelope"></i> </a>
+        <div class="skill">
+          <img src="svg/html.svg" alt="HTML" />
+          <span>HTML</span>
         </div>
-      </div>
-      <div>
-        <div class="hero-right">
-          <h1 class="justify">Bringing Ideas to Life, One Line of Code.</h1>
-          <p class="justify">Hi, I'm Christopher Jan, aspiring software engineer actively involved in the web
-            development world, focused on
-            developing scalable and efficient systems. I am a solution minded developer with a hunger for learning new
-            technologies and the knowledge to keep
-            your application running at peak performance and high quality.</p>
-          <a href="CayabyabResume.pdf" target="_blank" download="CayabyabResume.pdf" class="resume-btn">Download
-            Resume</a>
+        <div class="skill">
+          <img src="svg/css.svg" alt="CSS" />
+          <span>CSS</span>
+        </div>
+        <div class="skill">
+          <img src="svg/git.svg" alt="Git" />
+          <span>Git</span>
+        </div>
+        <div class="skill">
+          <img src="svg/javascript.svg" alt="Javascript" />
+          <span>Javascript</span>
+        </div>
+        <div class="skill">
+          <img src="svg/java.svg" alt="Java" />
+          <span>Java</span>
+        </div>
+        <div class="skill">
+          <img src="svg/laravel.svg" alt="Laravel" />
+          <span>Laravel</span>
+        </div>
+        <div class="skill">
+          <img src="svg/mysql.svg" alt="MySQL" />
+          <span>MySQL</span>
+        </div>
+        <div class="skill">
+          <img src="svg/php.svg" alt="PHP" />
+          <span>PHP</span>
+        </div>
+        <div class="skill">
+          <img src="svg/python.svg" alt="Python" />
+          <span>Python</span>
         </div>
       </div>
     </section>
@@ -54,9 +86,8 @@
       This Portfolio was made using CSS, HTML and JavaScript
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
 </body>
 
 </html>
-
-
