--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      gsap.from('.profile-img', {
+        opacity: 0,
+        x: -80,
+        duration: 1,
+        ease: "power2.out"
+      });
+      gsap.from('.socials a', {
+        opacity: 0,
+        y: 30,
+        stagger: 0.15,
+        duration: 0.7,
+        delay: 0.5,
+        ease: "back.out(1.7)"
+      });
+      gsap.from('.hero-right h1', {
+        opacity: 0,
+        y: -40,
+        duration: 1,
+        delay: 0.7,
+        ease: "power2.out"
+      });
+      gsap.from('.hero-right p', {
+        opacity: 0,
+        y: 40,
+        duration: 1,
+        delay: 1,
+        ease: "power2.out"
+      });
+      gsap.from('.resume-btn', {
+        opacity: 0,
+        scale: 0.8,
+        duration: 0.6,
+        delay: 1.3,
+        ease: "back.out(1.7)"
+      });
+    });
+  </script>
 </body>
 
 </html>
