--- a/projects.html
+++ b/projects.html
@@ -153,6 +153,18 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
+  <!-- Add this after your other scripts -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      gsap.from('.project-card', {
+        opacity: 0,
+        y: 60,
+        duration: 1,
+        stagger: 0.18,
+        ease: "power2.out"
+      });
+    });
+  </script>
 
 </body>
 
