--- a/about.html
+++ b/about.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="SVG/icon.svg" type="image/x-icon">
+</head>
+
+<head>
   <script>
-    // Apply theme class before CSS loads to prevent flash
     (function () {
-      let theme = localStorage.getItem('theme');
-      if (!theme) {
-        theme = 'light';
-        localStorage.setItem('theme', 'light');
-      }
-      if (theme === 'light') {
-        document.documentElement.classList.add('light-mode');
-      }
+      const savedTheme = localStorage.getItem('theme') || 'light';
+      document.documentElement.classList.add(savedTheme === 'light' ? 'light-mode' : 'dark-mode');
+      document.body.className = savedTheme + '-mode';
     })();
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CJLC Portfolio</title>
@@ -31,21 +30,17 @@
     </div>
   </header>
   <main>
-    <!-- Profile section for hero -->
+    <div class="project-card project-red-green3"></div>
     <section class="hero">
       <div class="hero-content">
-        <h2 class="skills-title">All About Me</h2>
+        <h2 class="about-title">All About Me</h2>
         <img src="images/developer.jpg" alt="Profile Picture" class="profile-img">
         <p class="profile-text">
           I am Christopher Jan Llanes Cayabyab, graduated from National University Laguna - Asia Pacific College Program
-          Extension
-          with the course of Bachelor of Science in Information Technology. At first I had no interest in programming,
-          but as I tried
-          learning and exploring different technologies, I discovered my passion for solving problems and building
-          solutions through code.
-          My journey during Internship has taught me the value of persistence, creativity, and continuous learning in
-          the ever-evolving
-          world of technology.
+          Extension with the course of Bachelor of Science in Information Technology. At first I had no interest in programming,
+          but as I tried learning and exploring different technologies, I discovered my passion for solving problems and building
+          solutions through code. My journey during Internship has taught me the value of persistence, creativity, and continuous 
+          learning in the ever-evolving world of technology.
         </p>
       </div>
     </section>
@@ -60,6 +55,116 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const isMobile = window.matchMedia("(max-width: 768px)").matches;
+
+      const masterTL = gsap.timeline({
+        defaults: {
+          ease: "power3.out",
+          duration: 0.8
+        }
+      });
+
+      gsap.set([".about-title", ".profile-img", ".profile-text"], {
+        opacity: 0
+      });
+      gsap.set(".about-title", {
+        y: isMobile ? -20 : -30  
+      });
+      gsap.set(".profile-img", {
+        scale: isMobile ? 0.95 : 0.9, 
+        rotate: isMobile ? -3 : -5   
+      });
+      gsap.set(".profile-text", {
+        y: isMobile ? 20 : 30       
+      });
+
+      masterTL
+        .to(".about-title", {
+          y: 0,
+          opacity: 1,
+          duration: 1,
+          ease: "back.out(1.4)"
+        })
+        .to(".profile-img", {
+          opacity: 1,
+          scale: 1,
+          rotate: 0,
+          duration: isMobile ? 1 : 1.2, 
+          ease: isMobile ? "power2.out" : "elastic.out(1, 0.5)", 
+          onStart: function () {
+            gsap.set(".profile-img", { display: "block" });
+          }
+        }, "-=0.6")
+        .to(".profile-text", {
+          y: 0,
+          opacity: 1,
+          stagger: isMobile ? 0.05 : 0.1, 
+          duration: isMobile ? 0.8 : 1   
+        }, "-=0.4");
+
+      const floatAnimation = gsap.to(".profile-img", {
+        y: isMobile ? "+=10" : "+=15", 
+        duration: isMobile ? 4 : 3.5,   
+        repeat: -1,
+        yoyo: true,
+        ease: "sine.inOut",
+        rotation: isMobile ? 0.5 : 1 
+      });
+
+      masterTL.from(".project-red-green3", {
+        scaleX: 0,
+        transformOrigin: "left center",
+        duration: isMobile ? 1.2 : 1.8, 
+        ease: "expo.out",
+        delay: isMobile ? 0.1 : 0.3   
+      }, "+=0.5");
+
+      if (!isMobile) {
+        const profileImg = document.querySelector(".profile-img");
+        if (profileImg) { 
+          profileImg.addEventListener("mouseenter", () => {
+            gsap.killTweensOf(profileImg);
+            gsap.to(profileImg, {
+              scale: 1.08,
+              duration: 0.4,
+              ease: "power2.out",
+              filter: "drop-shadow(0 5px 15px rgba(0, 0, 0, 0.2))",
+              rotation: 3
+            });
+          });
+
+          profileImg.addEventListener("mouseleave", () => {
+            gsap.to(profileImg, {
+              scale: 1,
+              duration: 0.6,
+              ease: "elastic.out(1, 0.5)",
+              filter: "none",
+              rotation: 0,
+              onComplete: () => floatAnimation.restart()
+            });
+          });
+        }
+      }
+
+      gsap.from(".bg-element", {
+        opacity: 0,
+        y: isMobile ? 10 : 20, 
+        stagger: isMobile ? 0.1 : 0.2, 
+        duration: isMobile ? 0.8 : 1,  
+        delay: isMobile ? 1 : 1.5,    
+        ease: "power1.out"
+      });
+
+      setTimeout(() => {
+        const img = document.querySelector('.profile-img');
+        if (img && getComputedStyle(img).display === 'none') {
+          gsap.set(img, { display: 'block' });
+        }
+      }, 500);
+    });
+  </script>
 </body>
 
 </html>
