--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,25 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="SVG/icon.svg" type="image/x-icon">
+</head>
+
+<head>
+  <script>
+    (function () {
+      const savedTheme = localStorage.getItem('theme') || 'light';
+      document.documentElement.classList.add(savedTheme === 'light' ? 'light-mode' : 'dark-mode');
+      document.body.className = savedTheme + '-mode';
+    })();
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CJLC Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
-<script>
-
-</script>
 
 <body>
   <header>
@@ -18,33 +28,21 @@
     </div>
   </header>
   <main>
-    <section class="hero">
-      <div class="hero-left">
-        <div class="profile-img">
-          <img src="images/developerimage.png" alt="Your Name - Profile Picture">
-        </div>
-        <div class="socials">
-          <a href="https://www.facebook.com/christphr.jn" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-          <a href="https://github.com/ChrisBROWN25" target="_blank"> <i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/christopher-jan-cayabyab-746996271/" target="_blank"> <i
-              class="fa-brands fa-linkedin"></i></a>
-          <a href="mailto:cayabyabchristopherjan@gmail.com?subject=Inquiry from your website&body=Hello Christopher Jan,"
-            target="_blank"> <i class="fa-solid fa-square-envelope"></i> </a>
-        </div>
+
+  <div class="contact-card">
+    <div class="contact-img-box">
+      <img class="contact-img" src="images/contactpic.jpg" alt="Profile" />
+    </div>
+    <div class="contact-info">
+      <h3>FEEL FREE TO CONTACT ME!</h3>
+      <div class="name">Christopher Jan Cayabyab</div>
+      <div class="degree">BS Information Technology</div>
+      <div class="phone">09398147036</div>
+      <div class="email">
+        <a href="mailto:cayabyabchristopherjan@gmail.com">cayabyabchristopherjan@gmail.com</a>
       </div>
-      <div>
-        <div class="hero-right">
-          <h1 class="justify">Bringing Ideas to Life, One Line of Code.</h1>
-          <p class="justify">Hi, I'm Christopher Jan, aspiring software engineer actively involved in the web
-            development world, focused on
-            developing scalable and efficient systems. I am a solution minded developer with a hunger for learning new
-            technologies and the knowledge to keep
-            your application running at peak performance and high quality.</p>
-          <a href="CayabyabResume.pdf" target="_blank" download="CayabyabResume.pdf" class="resume-btn">Download
-            Resume</a>
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
   </main>
   <footer>
     <div class="footer-left">
@@ -54,7 +52,35 @@
       This Portfolio was made using CSS, HTML and JavaScript
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="javascript/script.js"></script>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+        gsap.from('.contact-card', {
+          opacity: 0,
+          y: 60,
+          duration: 1,
+          ease: "power2.out"
+        });
+
+        gsap.from('.contact-img', {
+          opacity: 0,
+          x: -40,
+          duration: 1,
+          delay: 0.3,
+          ease: "power2.out"
+        });
+
+        gsap.from('.contact-info > *', {
+          opacity: 0,
+          x: 40,
+          duration: 0.8,
+          stagger: 0.15,
+          delay: 0.5,
+          ease: "power2.out"
+        });
+      });
+  </script>
 </body>
 
 </html>
