--- a/index.html
+++ b/index.html
@@ -2,114 +2,149 @@
 <html lang="en">
 
 <head>
-  <script>
-    // Apply theme class before CSS loads to prevent flash
-    (function () {
-      let theme = localStorage.getItem('theme');
-      if (!theme) {
-        theme = 'light';
-        localStorage.setItem('theme', 'light');
-      }
-      if (theme === 'light') {
-        document.documentElement.classList.add('light-mode');
-      }
-    })();
-  </script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CJLC Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+	<link rel="icon" href="SVG/icon.svg" type="image/x-icon">
 </head>
-<script>
 
-</script>
+  <head>
+    <script>
+      (function () {
+        const savedTheme = localStorage.getItem('theme') || 'light';
+        document.documentElement.classList.add(savedTheme === 'light' ? 'light-mode' : 'dark-mode');
+        document.body.className = savedTheme + '-mode';
+      })();
+    </script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CJLC Portfolio</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
 
-<body>
-  <header>
-    <div class="navbar">
-    </div>
-  </header>
-  <main>
-    <section class="hero">
-      <div class="hero-left">
-        <div class="profile-img">
-          <img src="images/developerimage.png" alt="Your Name - Profile Picture">
+  <body>
+    <header>
+      <div class="navbar"></div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero-left">
+          <div class="profile-img">
+            <img
+              src="images/developerimage.png"
+              alt="Your Name - Profile Picture"
+            />
+          </div>
+          <div class="socials">
+            <a href="https://www.facebook.com/christphr.jn" target="_blank">
+              <i class="fa-brands fa-facebook"></i
+            ></a>
+            <a href="https://github.com/ChrisBROWN25" target="_blank">
+              <i class="fa-brands fa-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/christopher-jan-cayabyab-746996271/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
         </div>
-        <div class="socials">
-          <a href="https://www.facebook.com/christphr.jn" target="_blank"> <i class="fa-brands fa-facebook"></i></a>
-          <a href="https://github.com/ChrisBROWN25" target="_blank"> <i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/christopher-jan-cayabyab-746996271/" target="_blank"> <i
-              class="fa-brands fa-linkedin"></i></a>
-          <a href="mailto:cayabyabchristopherjan@gmail.com?subject=Inquiry from your website&body=Hello Christopher Jan,"
-            target="_blank"> <i class="fa-solid fa-square-envelope"></i></a>
+        <div>
+          <div class="hero-right">
+            <h1 class="justify">Unlocking Potential, One Byte at a Time.</h1>
+            <p class="justify">
+              Hi, I'm Christopher Jan, aspiring software developer actively
+              involved in the web development world, focused on developing
+              scalable and efficient systems. I am a solution minded developer
+              with a hunger for learning new technologies and the knowledge to
+              keep your application running at peak performance and high
+              quality.
+            </p>
+            <a href="CayabyabResume.pdf" download="CayabyabResume.pdf" class="resume-btn" id="resumeLink">Download Resume</a>
+          </div>
         </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-left">
+        © 2025 Christopher Jan Llanes Cayabyab. All rights reserved.
       </div>
-      <div>
-        <div class="hero-right">
-          <h1 class="justify">Bringing Ideas to Life, One Line of Code.</h1>
-          <p class="justify">Hi, I'm Christopher Jan, aspiring software engineer actively involved in the web
-            development world, focused on
-            developing scalable and efficient systems. I am a solution minded developer with a hunger for learning new
-            technologies and the knowledge to keep
-            your application running at peak performance and high quality.</p>
-          <a href="CayabyabResume.pdf" target="_blank" download="CayabyabResume.pdf" class="resume-btn">Download
-            Resume</a>
-        </div>
+      <div class="footer-right">
+        This Portfolio was made using CSS, HTML and JavaScript
       </div>
-    </section>
-  </main>
-  <footer>
-    <div class="footer-left">
-      © 2025 Christopher Jan Llanes Cayabyab. All rights reserved.
-    </div>
-    <div class="footer-right">
-      This Portfolio was made using CSS, HTML and JavaScript
-    </div>
-  </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="javascript/script.js"></script>
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      gsap.from('.profile-img', {
-        opacity: 0,
-        x: -80,
-        duration: 1,
-        ease: "power2.out"
-      });
-      gsap.from('.socials a', {
-        opacity: 0,
-        y: 30,
-        stagger: 0.15,
-        duration: 0.7,
-        delay: 0.5,
-        ease: "back.out(1.7)"
-      });
-      gsap.from('.hero-right h1', {
-        opacity: 0,
-        y: -40,
-        duration: 1,
-        delay: 0.7,
-        ease: "power2.out"
-      });
-      gsap.from('.hero-right p', {
-        opacity: 0,
-        y: 40,
-        duration: 1,
-        delay: 1,
-        ease: "power2.out"
-      });
-      gsap.from('.resume-btn', {
-        opacity: 0,
-        scale: 0.8,
-        duration: 0.6,
-        delay: 1.3,
-        ease: "back.out(1.7)"
-      });
-    });
-  </script>
-</body>
+    </footer>
+    <script src="javascript/navbar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="javascript/script.js"></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        const tl = gsap.timeline({ defaults: { ease: "power2.out" } });
 
+        tl.from(".profile-img", {
+          opacity: 0,
+          x: -100,
+          duration: 1.2,
+          ease: "power3.out",
+          rotate: -5
+        });
+
+        tl.from(".hero-right h1", {
+          opacity: 0,
+          y: -50,
+          duration: 1,
+          ease: "back.out(1.4)",
+          scale: 1.2
+        }, "-=0.8");
+
+        tl.from(".unlocking-text", {
+          opacity: 0,
+          y: 30,
+          duration: 0.8,
+          ease: "elastic.out(1, 0.5)",
+          skewX: 15
+        }, "-=0.5");
+
+        tl.from(".socials a", {
+          opacity: 0,
+          y: 40,
+          stagger: 0.1,
+          duration: 0.6,
+          ease: "back.out(2)",
+          rotation: 180
+        }, "-=0.3");
+
+        tl.from(".hero-right p", {
+          opacity: 0,
+          y: 30,
+          duration: 1.2,
+          ease: "sine.out",
+          autoAlpha: 0
+        }, "-=0.4");
+
+        tl.from(".resume-btn", {
+          opacity: 0,
+          scale: 0,
+          duration: 0.8,
+          ease: "elastic.out(1, 0.8)",
+          y: 20,
+          rotation: 5
+        }, "-=0.2");
+
+        tl.to(".resume-btn", {
+          scale: 1.05,
+          duration: 0.8,
+          repeat: -1,
+          yoyo: true,
+          ease: "sine.inOut"
+        }, "+=1");
+      });
+    </script>
+  </body>
 </html>
-
-
