--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CJLC Portfolio</title>
+    <title>CJLC's Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link
